[Update] refresh interval

--- a/templates/inspection.html
+++ b/templates/inspection.html
@@ -26,4 +26,7 @@
         </div>
     </div>
 </div>
+<script language="javascript">
+    window.setTimeout('window.location.reload()', 3000);
+</script>
 {% endblock %}
