[Update] mvp version

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -79,6 +79,32 @@
             </a>
           </li>
         </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              href="{% url 'dataset' %}"
+              aria-expanded="true"
+              aria-controls="navbar-dashboards"
+            >
+              <i class="ni ni-money-coins" style="color: chocolate;"></i>
+              <span class="nav-link-text">학습용 데이터 선택 및 학습</span>
+            </a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              href="{% url 'aimodel' %}"
+              aria-expanded="true"
+              aria-controls="navbar-dashboards"
+            >
+              <i class="ni ni-app" style="color: chocolate;"></i>
+              <span class="nav-link-text">AI 모델 선택</span>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
