--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     />
     <meta name="author" content="Creative Tim" />
     <title>{% block title %}{% endblock %} | Soosan</title>
-
+    
     <!-- Fonts -->
     <link
       rel="stylesheet"
@@ -63,6 +63,14 @@
       href="{% static 'css/dashboard.css' %}"
       type="text/css"
     />
+    <link
+    rel="stylesheet"
+    href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+  />
+  <link
+  rel="stylesheet"
+  href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+/>
   </head>
 
   <body>
@@ -97,6 +105,7 @@
     <!-- Optional JS -->
     <script src="{% static 'assets/vendor/chart.js/dist/Chart.min.js' %}"></script>
     <script src="{% static 'assets/vendor/chart.js/dist/Chart.extension.js' %}"></script>
+    <script src="{% static 'assets/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script>
     <!-- Argon JS -->
     <script src="{% static 'assets/js/dashboard.js' %}?v=1.2.0"></script>
     <!-- Demo JS - remove this in your project -->
