--- a/templates/inspection.html
+++ b/templates/inspection.html
@@ -2,33 +2,38 @@
 {% block title%}실시간 분석 화면{% endblock %}
 {% block content %}
 {% load static %}
-<div class="d-flex">
-    <div class="card" style="width:65%; height: auto; text-align:center;">
-        <div class="card-body">
-            <img src="{% get_static_prefix %}image/{{image.filename}}" style="width: 100%; height: auto; margin-bottom: 1%; ">
-            <p class="card-text">{{ image.filename }}</p>
-        </div>  
-    </div>
-    <div style="margin-left: 2%; width:35%;">
-        <div class="card">  
+<div id="img">
+    <div class="d-flex">
+        <div class="card" style="width:65%; height: auto; text-align:center;">
             <div class="card-body">
-                <h5 class="card-title">Predicted Value (3 Class)</h5>
-                <p class="card-text">예측 값: {{ image.result.predict_3class }}</p>
-                <p class="card-text">예측 확률: {{ image.result.confidence_3class }}</p>
-            </div>
+                <img src="{% get_static_prefix %}image/{{image.filename}}" style="width: 100%; height: auto; margin-bottom: 1%; ">
+                <p class="card-text">{{ image.filename }}</p>
+            </div>  
         </div>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Predicted Value (9 Class)</h5>
-                <p class="card-text">예측 값: {{ image.result.predict_9class }}</p>
-                <p class="card-text">예측 확률: {{ image.result.confidence_9class }}</p>
+        <div style="margin-left: 2%; width:35%;">
+            <div class="card">  
+                <div class="card-body">
+                    <h5 class="card-title">Predicted Value (3 Class)</h5>
+                    <p class="card-text">예측 값: {{ image.result.predict_3class }}</p>
+                    <p class="card-text">예측 확률: {{ image.result.confidence_3class }}</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Predicted Value (9 Class)</h5>
+                    <p class="card-text">예측 값: {{ image.result.predict_9class }}</p>
+                    <p class="card-text">예측 확률: {{ image.result.confidence_9class }}</p>
+                </div>
             </div>
         </div>
     </div>
 </div>
 <script language="javascript">
     if (window.location.pathname.split('/')[2]===''){
-        window.setTimeout('window.location.reload()', 3000);
+        window.setTimeout(setInterval(refreshImage, 3000), 3000)
+    }
+    function refreshImage() {
+        $("#img").load(window.location.href + " #img");
     }
 </script>
 {% endblock %}
